RecordSchema.fstream() -> RecordSchema.stream()